--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
   ],
   "scripts": {
     "build": "vite build && tsc --emitDeclarationOnly",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest",
     "typecheck": "tsc --build --noEmit",
     "lint": "eslint .",
     "import-fix": "eslint . --no-inline-config --fix --config eslint-import.config.js",
     "format": "prettier --write ."
   },
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "exports": {
-    "types": "./dist/index.d.ts",
+    "types": "./dist/types/index.d.ts",
     "require": "./dist/index.cjs",
     "import": "./dist/index.mjs"
   },
@@ -39,6 +42,7 @@
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.8",
     "@types/three": "^0.128.0",
+    "@vitest/coverage-v8": "^3.1.4",
     "prettier": "^3.5.2",
     "three": "^0.128.0",
     "typescript": "^5.7.0",
