--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typecheck": "tsc --build --noEmit",
     "lint": "eslint .",
     "import-fix": "eslint . --no-inline-config --fix --config eslint-import.config.js",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky"
   },
   "types": "./dist/types/index.d.ts",
   "main": "./dist/index.cjs",
@@ -39,10 +40,14 @@
     "package.json"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.8",
     "@types/three": "^0.128.0",
     "@vitest/coverage-v8": "^3.1.4",
+    "husky": "^9.1.7",
     "prettier": "^3.5.2",
     "three": "^0.128.0",
     "typescript": "^5.7.0",
