--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/three": "^0.128.0",
     "@vitest/coverage-v8": "^3.1.4",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.2",
     "three": "^0.128.0",
     "typescript": "^5.7.0",
