--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "sideEffects": false,
   "files": [
-    "dist",
+    "dist/",
     "package.json"
   ],
   "devDependencies": {
@@ -47,13 +47,16 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/types": "^19.8.1",
     "@eslint/js": "^9.21.0",
+    "@release-it/conventional-changelog": "^10.0.1",
     "@types/node": "^22.13.8",
     "@types/three": "^0.128.0",
     "@vitest/coverage-v8": "^3.1.4",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.2",
+    "release-it": "^19.0.3",
     "three": "^0.128.0",
     "typescript": "^5.7.0",
     "typescript-eslint": "^8.25.0",
