chore: add LICENSE and README.md to the package output

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "sideEffects": false,
   "files": [
     "dist/",
+    "LICENSE",
+    "README.md",
     "package.json"
   ],
   "devDependencies": {
