--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/three": "^0.128.0",
     "@vitest/coverage-v8": "^3.1.4",
     "conventional-changelog-conventionalcommits": "^8.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
