--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "rootDir": "./lib",
     "outDir": "dist",
     "declarationDir": "dist/types",
     "lib": ["ESNext", "DOM"],
